--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
