--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAyzt21TX_jywbakOE_1yqM1yqPjgD5MbY" />
 
+        <activity android:name=".activity.HomeMapViewDetailActivity" />
         <activity android:name=".activity.CourseViewDetailActivity" />
         <activity android:name=".activity.MyCourseMoreActivity" />
         <activity android:name=".activity.SearchActivity" />
