--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
     //noinspection GradleCompatible
+    implementation "com.android.support:support-core-utils:28.0.0"
+    //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
