--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -19,8 +20,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.RidingActivity"></activity>
-
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
@@ -29,6 +28,15 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAyzt21TX_jywbakOE_1yqM1yqPjgD5MbY" />
 
+        <activity
+            android:name=".activity.SplashActivity"
+            android:theme="@style/SplashTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activity.RidingActivity" />
         <activity android:name=".activity.BadgeHomeActivity" />
         <activity android:name=".activity.HomeMapViewDetailActivity" />
         <activity android:name=".activity.CourseViewDetailActivity" />
@@ -36,13 +44,7 @@
         <activity android:name=".activity.SearchActivity" />
         <activity android:name=".activity.BottomNavigationActivity" />
         <activity android:name=".activity.SignupActivity" />
-        <activity android:name=".activity.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".activity.LoginActivity"></activity>
     </application>
 
 </manifest>
