--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation "com.android.support:support-core-utils:28.0.0"
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
+    implementation'com.akexorcist:bluetoothspp:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
